# voxel_mania

./: .gitignore  .gitmodules  AppData.h  CMakeLists.txt  Camera.cpp  Camera.h  InputHandling.cpp  InputHandling.h  LICENSE.md  Perlin.cpp  Perlin.h  Probabilities.cpp  Probabilities.h  README.md  RandomNumberGeneration.cpp  RandomNumberGeneration.h  RandomNumberGeneration.ixx  TerrainGeneration.cpp  TerrainGeneration.h  Vector2D.h  build_debug.sh  conandata.yml  main.cpp  math_ops.cpp  math_ops.h
Renderer/: Renderer.cpp  Renderer.h
cmake_scripts/: compiler_flags.cmake  external_lib_import.cmake  link_and_export_utilities.cmake
data/: cube.cpp  cube.h  tile.h
data/cursor_program/: frag.frag  vert.vert
data/program1/: frag.frag  vert.vert
data/program_for_regular_textures/: frag.frag  vert.vert
data/program_for_transparent_cross_textures/: frag.frag  vert.vert
data/program_for_unshaded_textures/: frag.frag  vert.vert
git_scripts/: create_dev_to_master_branch.sh
libraries/: CMakeLists.txt  export.h
libraries/OpenGlHelpers/: CMakeLists.txt  ShaderLoader.cpp  ShaderLoader.h
libraries/Renderer/: CMakeLists.txt  Camera.h  Renderer.cpp  Renderer.h
libraries/math/: Bounding.cpp  Bounding.h  CMakeLists.txt  Clipping.cpp  Clipping.h  Matrix3D.cpp  Matrix3D.h  Matrix4D.cpp  Matrix4D.h  Plane.cpp  Plane.h  Transformations.cpp  Transformations.h  Trigonometry.cpp  Trigonometry.h  Vector2D.cpp  Vector2D.h  Vector3D.cpp  Vector3D.h  Vector4D.cpp  Vector4D.h
libraries/math_ops/: CMakeLists.txt  math_ops.h
primitive_mesh_data/: CMakeLists.txt  cube.h  quad.h
